# Iridium_DirectIP_module

./: .gitignore  config.example.ini  data_log.txt  mail_client.py  pyproject.toml
examples/: tcp_client.py  tcp_server.lua  tcp_server.py
iridium/: __init__.py  iridium.py  main.py  tcp_client.py  tcp_server.py
iridium/examples/: tcp_client.lua  tcp_client.py  tcp_server.py
iridium/services/Messages/: AbstractMessage.py  Field.py  FieldsSchema.py  MO_Message.py  MT_Confirmation.py  MT_Message.py  __init__.py  types.py
services/Messages/: Field.py
tests/: test_MO_Message.py  test_MT_Message.py
