[tool.poetry]
name = "iridium"
version = "0.3.5"
description = ""
authors = ["alxnsmith <alx.n.smith@ya.ru>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.8"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
isort = "^5.11.4"
pynvim = "^0.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
